# cardinal

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: catalog.py  config.py  llm.py  main.py  optimizer.py  qdrant_client.py  schemas.py
backend/data/: cache.sqlite  correlation_cache.json  manual.yaml  sample_form.json  umap.json  vectors.json
backend/scripts/: build_composability.py  build_vectors.py  composability_graph.py  correlation_data.py  deploy_hf_space.py  explore.py  ingest_defillama.py  ingest_manual.py  precompute_umap.py  protocol_meta.py  upsert_qdrant.py  verify_day0.py
backend/tests/: test_filter.py  test_main.py  test_optimizer.py  test_translator.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  theme.ts  types.ts
frontend/src/components/: AllocationBar.tsx  DrawdownChart.tsx  DrawdownSwipe.tsx  DrilldownDrawer.tsx  ExplanationCard.tsx  LensScatter.tsx  LensSelector.tsx  RadarPanel.tsx  YieldSourceRank.tsx
frontend/src/views/: FormView.tsx  ResultsView.tsx
frontend/src/views/demo/: DemoIndex.tsx  FormDeFiLight.tsx  FormDeFiNative.tsx  FormFTEditorial.tsx  FormHybrid.tsx  FormMagazine.tsx  FormMercury.tsx  FormSwiss.tsx  FormSwissDark.tsx  FormTerminal.tsx
