[project]
name = "cardinal-backend"
version = "0.1.0"
description = "Vector-native yield discovery — Qdrant Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "qdrant-client>=1.18",
    "google-genai>=2.2",
    "sentence-transformers>=3.3",
    "umap-learn>=0.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "jupyter>=1.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
