[project]
name = "cardinal-backend"
version = "0.1.0"
description = "Vector-native yield discovery — Qdrant Hackathon 2026"
requires-python = ">=3.11"

# Runtime dependencies only — what the deployed FastAPI process actually imports.
# Heavy ML / data-processing deps live in the optional [pipeline] group so the
# Fly.io image stays small (~150MB instead of ~700MB).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "qdrant-client>=1.18",
    "google-genai>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Build-time pipeline tooling — needed to (re)run scripts/build_vectors.py,
# scripts/precompute_umap.py, scripts/ingest_*. Not installed in the runtime image.
pipeline = [
    "sentence-transformers>=3.3",
    "umap-learn>=0.5",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "node2vec>=0.4",
    "networkx>=3.0",
    "gensim>=4.3",
    "yfinance>=0.2",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "jupyter>=1.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
